--- a/base-fe-home/src/pages/campaign/Campaign.css
+++ b/base-fe-home/src/pages/campaign/Campaign.css
@@ -3,9 +3,10 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 260px;
   width: 100%;
+  height: 100vh; 
   position: relative;
+  max-height: 300px;
 }
 
 .campaign-banner::before {
